Token communicatin with kivy

--- a/templates/proba.html
+++ b/templates/proba.html
@@ -39,6 +39,23 @@
     data-placement="top">
     <span class="fa fa-cog">Test Popover</span>
 </a>
+<br>
 
+<h4> Token Auth</h4>
+<p>
+    CodingWithMitch |  
+    Django Rest framework TokenAuthentication |  
+    https://www.youtube.com/watch?v=Wq6JqXqOzCE | 
+</p>
+<p>
+    STUDYGYAAN | 
+    Django REST Framework Tutorial – Register Login Logout API | 
+    https://studygyaan.com/django/django-rest-framework-tutorial-register-login-logout | 
+    https://www.youtube.com/watch?v=Cw_jSc1NGdo |
+</p>
+<p>https://blog.devgenius.io/django-rest-knox-token-authentication-f134760a4a7b</p>
+<h4> Kivy - Django database</h4>
+<p>John Kiguru  | 
+    https://www.section.io/engineering-education/using-django-in-kivy-application/</p>
 
 {% endblock %}
