change the Bar names

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>I-Me Porta Coffee Bar</h1>
+<h1>Coffe Bar Ante Portas </h1>
 <h2> THIS SITE UNDER CONSTRUCTION</h2>
 <h6> THIS SITE IS A DJANGO TUTORIAL (and GIT :-)</h6>
 
