--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <div class="page-header">
         <div class="row-md-1">
             <div class="col-md-12">
-                {% include "base/navbar.html" with site_title=' I me kávézója '  site_logo="src='/static/image/coffe_draw.webp'" %}             
+                {% include "base/navbar.html" with site_title='I-mee Coffee'  site_logo="src='/static/image/coffe_draw.webp'" %}             
             </div>
         </div>        
     </div>
