--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
 {% block content %}
 <style>
     body {
-      background-image: url(/static/image/blank-coffee-day-background.webp);
+      background-image: url(/static/coffee_bg_6.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: 100% 100%;
@@ -32,12 +32,24 @@
                 <p>Since I want to get to know Django purely now, I decided to use only HTML and the minimal style.</p>
                 <p></p>
                 <br>
-                <p> (2022.05.30) The main principle failed. I wanted a pure django creation without jawascript. 
                 <br> But ... </p>
                 <p> </p> 
-                <h6> staff login:    the.boss@staff.com</h6>
+                <h6> staff login:    boss@staff.com</h6>
                 <h6>password:    Enter1</h6> 
-                <p style="text-align:right;"><i>e-mail: peterjung777@gmail.com</i></p>  
+                <p style="text-align:right;"><i>e-mail: peterjung777@gmail.com</i></p>
+                <p>Page on GITHUB: https://github.com/Jupieter/I-me-coffee</p>
+                <br>
+                <p>A mobile application is also being prepared for the website.</p>
+                <p>Reminder for the next coffee and appointment booking. (Login and TOKEN communication)</p>
+                <p>Mobil app on GITHUB: https://github.com/Jupieter/CoffeeShop_Test </p>
+                <br>
+                <p> (2022.05.30) The main principle failed. I wanted a pure django creation without jawascript. </p>
+                <p> (2022.06.15) First use the Bootsrap modal </p>
+                <p> (2022.06.22) Little game with JawaScript Bootsrap Alert </p>
+                <p> (2022.06.27) New Universal Message Modal with htmx (hx-vals)</p>
+                <p> (2022.08.04) Run the CoffeeShop Mobil app on Android</p>
+                <p> (2022.08.05) CoffeeShop Mobil app communicate with the webpage CoffeBar</p>
+
             </div>
         </div>
     </div>
