--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
 <h2> THIS SITE UNDER CONSTRUCTION</h2>
 <h6> THIS SITE IS A DJANGO TUTORIAL (and GIT :-)</h6>
 
-<h6> staff login:    the.boss@staff.com</h6>
+<h6> staff login:    boss@staff.com</h6>
 <h6>password:    Enter1</h6>
 
 <div class="container">
