--- a/shop/templates/shop/coffee_make.html
+++ b/shop/templates/shop/coffee_make.html
@@ -46,12 +46,12 @@
         <table class="table table table-hover border">
             <thead class="table-dark">
                 <tr>  
-                    <th class="col-sm-1">     Márka    </th>
-                    <th class="col-sm-1">    Típus     </th>
-                    <th class="col-sm-1">Kiszerelés [g]</th>
-                    <th class="col-sm-1">  Maradék [g]  </th>
-                    <th class="col-sm-1">  Azonosító   </th>
-                    <th class="col-sm-1">  Főzés    </th>
+                    <th class="col-sm-1">     Brand    </th>
+                    <th class="col-sm-1">    Type     </th>
+                    <th class="col-sm-1">Packaging weight [g]</th>
+                    <th class="col-sm-1">  Remainder [g]  </th>
+                    <th class="col-sm-1">  Pk   </th>
+                    <th class="col-sm-1">  Make    </th>
                     
                 </tr>
             </thead>
