--- a/templates/proba.html
+++ b/templates/proba.html
@@ -57,5 +57,9 @@
 <h4> Kivy - Django database</h4>
 <p>John Kiguru  | 
     https://www.section.io/engineering-education/using-django-in-kivy-application/</p>
+<p>
+    Code Aura - How to Deploy Django App on Heroku with PostgreSQL Database
+    https://www.youtube.com/watch?v=5d8AQFF0Ot0
+</p>
 
 {% endblock %}
