--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -6,7 +6,9 @@
 {% url "contact_url" as contact_url %}
 {% load static %}
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark mb-5">
+
+<nav class="navbar container-fluid navbar-expand-lg navbar-custom sticky-top  mb-5">
+  
   <a class="navbar-brand">
     <img {{ site_logo }} alt="Logo" style="width:40px;" class="rounded-pill">
   </a>
