--- a/templates/base/css.html
+++ b/templates/base/css.html
@@ -6,6 +6,7 @@
 
 <link  href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css" rel="stylesheet">  
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Style Script' rel='stylesheet'>
 
 
 
