--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -7,7 +7,7 @@
 {% load static %}
 
 
-<nav class="navbar container-fluid navbar-expand-lg navbar-custom sticky-top  mb-5">
+<nav class="navbar container-fluid navbar-expand-lg navbar-custom sticky-top  mb-5" style="box-shadow: 10px 10px 5px #1a0c02;">
   
   <a class="navbar-brand">
     <img {{ site_logo }} alt="Logo" style="width:40px;" class="rounded-pill">
