--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -6,13 +6,6 @@
 {% endblock %}
 
 {% block style %}    
-    <style>
-        body {background-color: white;}
-        h2  {
-        text-align: middle;
-        color: rgb(51, 31, 1);
-        }
-    </style>
 {% endblock %}  
 
 {% block content %}
@@ -25,8 +18,8 @@
                 data-bs-toggle="popover" 
                 data-bs-trigger="hover" 
                 data-bs-content="Order, Make, Booking">
-                <img src ="{% static '/image/koffe.jpeg' %}" class="rounded" 
-                style="width:100px;height:100px; border:5px solid; "; alt="choice">                 
+                <img src ="{% static '/image/koffe.jpeg' %}" class="rounded btn-border" 
+                style="width:100px;height:100px; "; alt="choice">                 
             </a>
         </div>
         <div class="col-sm-6 right">
