--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,6 +20,7 @@ body {
     
 .navbar-custom  {
     color: #452415;
+    box-shadow: 10px 10px 5px #1a0c02;
 }
 .navbar-brand {
     color: #452415;
@@ -71,9 +72,42 @@ h1, h2, h3, h4 {
 }
 
 .bg-brown {
-    background-color: 	#634832;
+    background-color: 	#634832  /* #634832; #452415*/;
+    color: #e4c79b;
+    box-shadow: 10px 10px 5px #1a0c02;
 }
 
 .text-capuccino {
     color: #dbc1ac;
+}
+
+.table-brown {
+    background-color: #452415;
+    color: #dbc1ac;
+}
+.table-capuccino {
+    background-color: #e4c79b;
+    color: #452415;
+}
+
+.popover-header {
+    background-color: #452415;
+    color: #e4c79b;
+}
+.popover-body {
+    background-color: #e4c79b;
+    color: #452415;
+}
+.btn-border {
+    border:4px solid;
+    border-color: #634832;
+    box-shadow: 10px 10px 5px #1a0c02;
+}
+.btn-capuccino {
+    color: #42220d;
+    background-color: #e4c79b;
+}
+.btn-brown {
+    color: #e4c79b ;
+    background-color: #42220d;
 }
