--- a/shop/templates/shop/c_order_form.html
+++ b/shop/templates/shop/c_order_form.html
@@ -1,13 +1,13 @@
 {% load widget_tweaks %}
 <script src="/static/js/c_order_form.js"></script>
 <!-- The Modal -->
-<div class="modal-lg">
+<div class="modal-lg ">
 
     <form id="usersForm" 
     method="POST" 
     hx-post={{request.path}} 
     hx-headers='{"X-CSRFToken":"{{ csrf_token }}"}' 
-    class="modal-content">  
+    class="modal-content btn-border btn-brown">  
     
         <!-- Modal Header -->
         <div class="modal-header  "> 
@@ -21,7 +21,7 @@
                         <h6>There are only {{dose}} servings of coffee left.</h6>
                     </div>
                     <div class="col-1 right">
-                        <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">×</button>
+                        <button type="button" class="btn btn-sm btn-capuccino" data-bs-dismiss="modal">×</button>
                     </div>
                 </div>
             </div>
@@ -82,9 +82,9 @@
             
         <!-- Modal footer -->
         <div class="modal-footer  ">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-capuccino" data-bs-dismiss="modal">Cancel</button>
             {% if user.is_authenticated %}
-            <button type="submit" class="save btn btn-primary">Save</button>
+            <button type="submit" class="save btn btn-capuccino">Save</button>
             {% endif %}
         </div>
     
