--- a/shop/templates/shop/coffee_make.html
+++ b/shop/templates/shop/coffee_make.html
@@ -11,8 +11,8 @@
 {% block content %}
 <div class="container sm ">
     <br>
-    <div class="row-sm-2">
-        <div class="col-sm-2 right">
+    <div class="row p-5">
+        <div class="col-sm-3 ">
             <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_home' %}" {% endif %}
             title="Back Coffee Page"               
                 data-bs-toggle="popover" 
@@ -22,16 +22,16 @@
                 style="width:100px;height:100px; "; alt="choice">                 
             </a>
         </div>
-        <div class="col-sm-6 right">
-            <h1> Kávé főzés {{dt}} </h1>
-            <h4> Kibontott kávék</h4>
+        <div class="col-sm-9 ">
+            <h1 class="txt-shadow"> Kávé főzés {{dt}} </h1>
+            <h4 class="txt-shadow"> Kibontott kávék</h4>
         </div>    
     </div>
 </div>
 
 <div class="container sm ">
     <div class="row-sm-6">
-        <table class="table table-hover border">
+        <table class="table table-hover btn-border ">
             <thead class="table-brown">
                 <tr>  
                     <th class="col-sm-1">     Brand    </th>
