--- a/shop/templates/shop/coffee_order_table.html
+++ b/shop/templates/shop/coffee_order_table.html
@@ -1,6 +1,6 @@
 {% for coffee in coffees %}
     <div class="row-sm-12">
-        <table class="table table-hover border">
+        <table class="table table-hover btn-border ">
             <thead class="table-brown">
                 <div id="demo"></div>
                 <div id="coffee{{coffee.id}}"></div>
