--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
     <div class="row p-2 border border-0 border-warning">
         <div class="col-md-3 centered p-1 border border-0 border-warning">
             <center>
-                <h4> Next Coffee:</h4>
+                <h4 class="txt-shadow"> Next Coffee:</h4>
                 <button type="button" 
                 class="btn position-relative"
                 style="padding:0px">
