--- a/shop/templates/shop/coffee_order_table.html
+++ b/shop/templates/shop/coffee_order_table.html
@@ -60,7 +60,7 @@
                                     <p style="color:red; font-size: 24px;">It's full</p>
                                 </a>
                             {% endif %}
-
+                            <!-- Tutorial of Modals. No function in this site
                             <a class="btn btn-danger btn-sm m-1" 
                                 hx-get="{% url 'view_modal_mess' %}"
                                 hx-vals='{"headx": "WARNING", "txtx":"Ooops Somthing is bad","background":"red"}'
@@ -80,7 +80,7 @@
                                 _="on htmx:afterOnLoad wait 10ms then add .show to #modalMessenger then add .show to #modal-backdrop">
                                 <span class="fa fa-cog"> Test Modal</span>
                             </a>
-
+                            -->
                     </th>
                     
                 </tr>
